--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   get: ^4.6.6
   flashy_tab_bar2: ^0.0.10
   intl: ^0.19.0
+  dart_openai: ^5.1.0
+  envied: ^1.0.0
 
 
   flutter_localizations:
