--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   bloc: ^8.1.4
   flutter_bloc: ^8.1.6
   firebase_core: ^3.7.0
+  cloud_firestore: ^5.5.0
   firebase_auth: ^5.3.2
   get: ^4.6.6
   flashy_tab_bar2: ^0.0.10
